updated text and skills, fixed nav squishing

--- a/style.css
+++ b/style.css
@@ -19,13 +19,16 @@ header {
   position: fixed;
   top: 0;
   width: 100%;
-  transition: all 0.25s cubic-bezier(0.77, 0, 0.175, 1);
+  transition: all 0.25s;
+  /*transform: translateY(0%)*/
+  /*transition: transform 0.4s ease-in-out;*/
+  /*source: https://youthspecialties.com/blog/category/resources-for-youth-ministry/*/
 }
 
 header h3 {
   float: left;
   display: inline-block;
-  width: 80%;
+  width: 50%;
   padding: 0.6em;
   font-family: "Lobster";
 }
@@ -35,7 +38,7 @@ header h3 {
 }
 
 header nav {
-  width: 20%;
+  width: 50%;
   padding: 0.25em;
   float: right;
 }
@@ -112,14 +115,14 @@ section p {
   margin-top: 2em;
 }
 
-.circle.img {
+img.circle {
   margin-bottom: 1em;
   height: 150px;
   width: 150px;
   border-radius: 50%;
 }
 
-.skills.img {
+img.skills {
   width: 100px;
   margin: 0.5em;
 }
@@ -128,7 +131,7 @@ section p {
   margin: 1.5em 0;
 }
 
-.screens.img {
+img.screens {
   width: 225px;
   margin: 0.5em;
 }
@@ -257,9 +260,14 @@ footer img {
 
 @media (min-width: 750px) {
 
-  .circle.img {
+  img.circle {
     height: 300px;
     width: 300px;
+  }
+
+  img.skills {
+    width: 200px;
+    margin: 0.5em;
   }
 
   header h3 {
@@ -277,6 +285,8 @@ footer img {
 
   header nav ul {
     padding: 0.5em;
+    width: 15em;
+    float: right;
     flex-direction: row;
   }
 
